# wbcrypto-fpe

./: CMakeLists.txt  README.md  call-fpe-app.md
include/wbcrypto/: aes.h  co_wbsm4.h  conf.h  fpe_app.h  modes.h  se_wbsm4.h  sm4.h  wbsm4.h
py/: trans_proxy.py
src/co_wbsm4/: core.c  exkey.c  fpe.c  init.c  local.h
src/fpe/: ff1.c  ff3.c
src/fpe_app/: address.c  cn_utf8.c  idcard.c  init.c  name.c  phone.c
src/se_wbsm4/: se_wbsm4.c  se_wbsm4_modes.c
src/sm4/: sm4.c
src/wbsm4/: wbsm4.c  wbsm4_exkey.c  wbsm4_gen.c
test/: CMakeLists.txt  co_wbsm4.c  fpe_app_test.c  fpe_test.c  key2file.c  wbsm4_fpe_app_test.c
udf/: CMakeLists.txt  README.md  mysql5.cpp  mysql8.cpp  mysql8_wbsm4.cpp
